--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "description": "Invoicing application",
   "dependencies": {
-    "fluxxor": "~1.2.1",
     "envify": "~1.2.1",
+    "fluxxor": "~1.2.1",
+    "plexus-objective": "0.0.1",
+    "plexus-validate": "0.0.2",
     "react": "~0.10.0"
   },
   "devDependencies": {
@@ -18,7 +20,6 @@
     "vinyl-source-stream": "^0.1.1",
     "gulp-streamify": "0.0.4",
     "browserify": "^3.32.1",
-    "reactify": "~0.13.1",
     "watchify": "~0.10.2"
   }
 }
