--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "react": "~0.10.0"
   },
   "devDependencies": {
+    "browser-sync": "^0.6.1",
+    "browserify": "^3.32.1",
     "gulp": "^3.5.2",
     "gulp-browserify": "^0.4.6",
-    "gulp-uglify": "^0.2.1",
-    "browser-sync": "^0.6.1",
     "gulp-imagemin": "^0.1.5",
+    "gulp-uglify": "^0.2.1",
+    "reactify": "^0.13.1",
     "vinyl-source-stream": "^0.1.1",
-    "browserify": "^3.32.1",
     "watchify": "~0.10.2"
   }
 }
