--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "plexus-form": "0.0.13",
     "plexus-objective": "0.0.1",
     "plexus-validate": "0.0.2",
-    "react": "~0.10.0"
+    "react": "~0.10.0",
+    "react-localstorage": "0.0.1"
   },
   "devDependencies": {
     "browser-sync": "^0.6.1",
