--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "envify": "~1.2.1",
     "fluxxor": "~1.2.1",
+    "moment": "^2.7.0",
     "plexus-form": "0.0.13",
     "plexus-objective": "0.0.1",
     "plexus-validate": "0.0.2",
