Show notification on build error

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "react-localstorage": "0.0.1"
   },
   "devDependencies": {
-    "gulp-util": "^2.2.19",
     "browser-sync": "1.1.2",
     "browserify": "4.2.0",
     "gulp": "3.8.5",
     "gulp-browserify": "0.5.0",
     "gulp-imagemin": "0.6.1",
+    "gulp-notify": "^1.4.0",
     "gulp-uglify": "0.3.1",
+    "gulp-util": "^2.2.19",
     "reactify": "0.13.1",
     "vinyl-source-stream": "0.1.1",
     "watchify": "0.10.2"
