--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "plexus-objective": "0.0.1",
     "plexus-validate": "0.0.2",
     "react": "0.10.0",
-    "react-localstorage": "0.0.1"
+    "react-localstorage": "0.0.1",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "browser-sync": "1.1.2",
