--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "0.2.0",
   "description": "Invoicing application",
   "dependencies": {
-    "moment": "2.7.0",
-    "plexus-form": "0.0.13",
+    "moment": "^2.10.6",
+    "plexus-form": "^0.1.3",
     "plexus-objective": "0.0.1",
-    "plexus-validate": "0.0.2",
-    "react": "0.10.0",
-    "react-localstorage": "0.0.1",
+    "plexus-validate": "0.0.4",
+    "react": "^0.13.3",
+    "react-localstorage": "^0.2.7",
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "browser-sync": "1.1.2",
-    "browserify": "4.2.0",
-    "gulp": "3.8.5",
-    "gulp-browserify": "0.5.0",
-    "gulp-imagemin": "0.6.1",
-    "gulp-notify": "^1.4.0",
-    "gulp-uglify": "0.3.1",
-    "gulp-util": "^2.2.19",
-    "reactify": "0.13.1",
-    "vinyl-source-stream": "0.1.1",
-    "watchify": "0.10.2"
+    "browser-sync": "^2.9.3",
+    "browserify": "^11.1.0",
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.4.0"
   }
 }
